--- a/EditorExtension/EditorExtension.csproj
+++ b/EditorExtension/EditorExtension.csproj
@@ -12,6 +12,8 @@
     <AssemblyName>EditorExtension</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -70,14 +72,27 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandController.cs" />
+    <Compile Include="Execution\Cucumber.cs" />
     <Compile Include="LineResultMarkers\Fail.cs" />
     <Compile Include="LineResultMarkers\LineResultMarker.cs" />
     <Compile Include="LineResultMarkers\Pass.cs" />
     <Compile Include="LineResultMarkers\Pending.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResultAdapter\ConvertOutputToObjectModel.cs" />
     <Compile Include="TextChangedListener.cs" />
     <Compile Include="EditorHighlighter.cs" />
+    <Compile Include="TextViewCreationListener.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Formatters\basic_info.rb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Key.snk" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
