Added new skipped option

--- a/EditorExtension/EditorExtension.csproj
+++ b/EditorExtension/EditorExtension.csproj
@@ -13,8 +13,7 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -75,6 +74,7 @@
   <ItemGroup>
     <Compile Include="CommandController.cs" />
     <Compile Include="Execution\Cucumber.cs" />
+    <Compile Include="LineResultMarkers\Skipped.cs" />
     <Compile Include="LineResultMarkers\Fail.cs" />
     <Compile Include="LineResultMarkers\LineResultMarker.cs" />
     <Compile Include="LineResultMarkers\Pass.cs" />
@@ -93,7 +93,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Key.snk" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
