--- a/lonestar/lonestar.csproj
+++ b/lonestar/lonestar.csproj
@@ -10,8 +10,7 @@
     <RootNamespace>Meerkatalyst.Lonestar</RootNamespace>
     <AssemblyName>Lonestar</AssemblyName>
     <SignAssembly>True</SignAssembly>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <ProjectGuid>{B4D2B039-3D83-4153-9FB0-383A0D666B2C}</ProjectGuid>
   </PropertyGroup>
@@ -89,6 +88,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Key.snk" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
