--- a/EditorExtension/EditorExtension.csproj
+++ b/EditorExtension/EditorExtension.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.Editor, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files\Microsoft Visual Studio 2010 Beta2 SDK\VisualStudioIntegration\Common\Assemblies\Microsoft.VisualStudio.Editor.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.OLE.Interop" />
     <Reference Include="Microsoft.VisualStudio.Shell.Interop" />
     <Reference Include="Microsoft.VisualStudio.Shell.Interop.8.0" />
@@ -86,7 +90,6 @@
     <Compile Include="ResultAdapter\ResultModels\StepResult.cs" />
     <Compile Include="TextChangedListener.cs" />
     <Compile Include="EditorHighlighter.cs" />
-    <Compile Include="TextViewCreationListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Formatters\basic_info.rb">
