--- a/src/lonestar/lonestar.csproj
+++ b/src/lonestar/lonestar.csproj
@@ -116,20 +116,20 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActiveWindowManager.cs" />
-    <Compile Include="Guids.cs" />
-    <Compile Include="MenuCommandController.cs" />
-    <Compile Include="MyToolWindow.cs" />
+    <Compile Include="VsIntegration\ActiveWindowManager.cs" />
+    <Compile Include="Properties\Guids.cs" />
+    <Compile Include="VsIntegration\MenuCommandController.cs" />
+    <Compile Include="VsIntegration\ResultsWindow.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Properties\GlobalSuppressions.cs" />
     <Compile Include="LonestarPackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PkgCmdID.cs" />
-    <Compile Include="WindowController.cs" />
+    <Compile Include="Properties\PkgCmdID.cs" />
+    <Compile Include="VsIntegration\WindowController.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources.resx">
