--- a/src/EditorExtension/EditorExtension.csproj
+++ b/src/EditorExtension/EditorExtension.csproj
@@ -128,6 +128,7 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Execution\IResultsProvider.cs" />
     <Compile Include="Interaction\CommandController.cs" />
     <Compile Include="Execution\Cucumber.cs" />
     <Compile Include="LineResultMarkers\Skipped.cs" />
