--- a/src/lonestar/lonestar.csproj
+++ b/src/lonestar/lonestar.csproj
@@ -48,6 +48,7 @@
     <Reference Include="Microsoft.VisualStudio.Text.UI, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualStudio.Text.UI.Wpf, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Design" />
@@ -129,6 +130,7 @@
     <Compile Include="LonestarPackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PkgCmdID.cs" />
+    <Compile Include="VsIntegration\TextChangedListener.cs" />
     <Compile Include="VsIntegration\WindowController.cs" />
   </ItemGroup>
   <ItemGroup>
