--- a/src/lonestar/lonestar.csproj
+++ b/src/lonestar/lonestar.csproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <Compile Include="VsIntegration\ActiveWindowManager.cs" />
     <Compile Include="Properties\Guids.cs" />
+    <Compile Include="VsIntegration\IntellisenseViewCreationListener.cs" />
     <Compile Include="VsIntegration\MenuCommandController.cs" />
     <Compile Include="VsIntegration\ResultsWindow.cs" />
     <Compile Include="Resources.Designer.cs">
@@ -130,7 +131,7 @@
     <Compile Include="LonestarPackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PkgCmdID.cs" />
-    <Compile Include="VsIntegration\TextChangedListener.cs" />
+    <Compile Include="VsIntegration\TextViewCreationListener.cs" />
     <Compile Include="VsIntegration\WindowController.cs" />
   </ItemGroup>
   <ItemGroup>
