Execution is now done on a background thread

--- a/src/EditorExtension/EditorExtension.csproj
+++ b/src/EditorExtension/EditorExtension.csproj
@@ -129,11 +129,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Execution\IResultsProvider.cs" />
-    <Compile Include="Interaction\CommandController.cs" />
+    <Compile Include="Interaction\ExecutionController.cs" />
     <Compile Include="Execution\Cucumber.cs" />
     <Compile Include="Interaction\ShellController.cs" />
     <Compile Include="Interaction\StepsIntellisense.cs" />
     <Compile Include="Interaction\VsTextViewInteractions.cs" />
+    <Compile Include="Interaction\WpfUIController.cs" />
     <Compile Include="LineResultMarkers\Skipped.cs" />
     <Compile Include="LineResultMarkers\Fail.cs" />
     <Compile Include="LineResultMarkers\LineResultMarker.cs" />
