Added concept of ErrorList

--- a/src/EditorExtension/EditorExtension.csproj
+++ b/src/EditorExtension/EditorExtension.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Execution\IResultsProvider.cs" />
     <Compile Include="Interaction\ExecutionController.cs" />
     <Compile Include="Execution\Cucumber.cs" />
+    <Compile Include="Interaction\StatusUpdater.cs" />
     <Compile Include="Interaction\StepsIntellisense.cs" />
     <Compile Include="Interaction\VsTextViewInteractions.cs" />
     <Compile Include="Interaction\WpfUIController.cs" />
