--- a/src/EditorExtension/EditorExtension.csproj
+++ b/src/EditorExtension/EditorExtension.csproj
@@ -14,6 +14,7 @@
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -66,7 +67,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Design" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
@@ -131,8 +131,11 @@
     <Compile Include="Execution\IResultsProvider.cs" />
     <Compile Include="Interaction\ExecutionController.cs" />
     <Compile Include="Execution\Cucumber.cs" />
+    <Compile Include="Interaction\IntellisenseWindow\Selection.xaml.cs">
+      <DependentUpon>Selection.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Interaction\StatusUpdater.cs" />
-    <Compile Include="Interaction\StepsIntellisense.cs" />
+    <Compile Include="Interaction\StepsIntellisenseProcessor.cs" />
     <Compile Include="Interaction\VsTextViewInteractions.cs" />
     <Compile Include="Interaction\WpfUIController.cs" />
     <Compile Include="LineResultMarkers\Skipped.cs" />
@@ -154,6 +157,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Interaction\IntellisenseWindow\Selection.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ResultsWindow\ResultsWindow.csproj">
+      <Project>{8BA696E9-D0BD-4396-857F-975C513F7CBD}</Project>
+      <Name>ResultsWindow</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
