--- a/src/EditorExtension/EditorExtension.csproj
+++ b/src/EditorExtension/EditorExtension.csproj
@@ -130,15 +130,17 @@
   <ItemGroup>
     <Compile Include="Execution\IResultsProvider.cs" />
     <Compile Include="Interaction\AdornmentLayerNames.cs" />
-    <Compile Include="Interaction\ExecutionController.cs" />
+    <Compile Include="Execution\ExecutionController.cs" />
     <Compile Include="Execution\Cucumber.cs" />
     <Compile Include="Interaction\IntellisenseWindow\Selection.xaml.cs">
       <DependentUpon>Selection.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Interaction\StatusUpdater.cs" />
-    <Compile Include="Interaction\StepsIntellisenseProcessor.cs" />
+    <Compile Include="Interaction\Providers\EditorHighlighterProvider.cs" />
+    <Compile Include="Interaction\Providers\StepsIntellisenseProvider.cs" />
+    <Compile Include="Interaction\StatusUpdateEventRaiser.cs" />
+    <Compile Include="Interaction\Processors\StepsIntellisenseProcessor.cs" />
     <Compile Include="Interaction\VsTextViewInteractions.cs" />
-    <Compile Include="Interaction\WpfUIController.cs" />
+    <Compile Include="Interaction\WpfUIStatusUpdater.cs" />
     <Compile Include="LineResultMarkers\Skipped.cs" />
     <Compile Include="LineResultMarkers\Fail.cs" />
     <Compile Include="LineResultMarkers\LineResultMarker.cs" />
@@ -149,7 +151,7 @@
     <Compile Include="ResultAdapter\ResultModels\FeatureResult.cs" />
     <Compile Include="ResultAdapter\ResultModels\ScenarioResult.cs" />
     <Compile Include="ResultAdapter\ResultModels\StepResult.cs" />
-    <Compile Include="Interaction\EditorHighlighterProcessor.cs" />
+    <Compile Include="Interaction\Processors\EditorHighlighterProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Formatters\basic_info.rb">
