--- a/src/EditorExtension/EditorExtension.csproj
+++ b/src/EditorExtension/EditorExtension.csproj
@@ -132,8 +132,8 @@
     <Compile Include="Interaction\AdornmentLayerNames.cs" />
     <Compile Include="Execution\ExecutionController.cs" />
     <Compile Include="Execution\Cucumber.cs" />
-    <Compile Include="Interaction\IntellisenseWindow\Selection.xaml.cs">
-      <DependentUpon>Selection.xaml</DependentUpon>
+    <Compile Include="Interaction\IntellisenseWindow\IntelliSenseControl.xaml.cs">
+      <DependentUpon>IntelliSenseControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Interaction\Providers\EditorHighlighterProvider.cs" />
     <Compile Include="Interaction\Providers\StepsIntellisenseProvider.cs" />
@@ -162,7 +162,7 @@
     <None Include="Key.snk" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Interaction\IntellisenseWindow\Selection.xaml">
+    <Page Include="Interaction\IntellisenseWindow\IntelliSenseControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
