Remove layer correctly before executing

--- a/src/EditorExtension/EditorExtension.csproj
+++ b/src/EditorExtension/EditorExtension.csproj
@@ -138,6 +138,7 @@
       <DependentUpon>IntelliSenseControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Interaction\IntellisenseWindow\HighlightedSelectionAction.cs" />
+    <Compile Include="Interaction\AdornmentLayerTags.cs" />
     <Compile Include="Interaction\Processors\GwtStringComparer.cs" />
     <Compile Include="Interaction\Processors\KeyBindingCommandFilter.cs" />
     <Compile Include="Interaction\Processors\NewStepsFoundHandlerArgs.cs" />
